# nbg-currencies-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
nbg_currency_api/: __init__.py  api.py  constants.py  exceptions.py  services.py  types.py
src/: __init__.py  api.py  services.py
tests/: conftest.py  mocker.py
tests/async/: test_api.py  test_services.py
tests/sync/: test_api.py  test_services.py
