[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nbg-currencies-api"
version = "0.1.4"
description = "A Python wrapper over NBG official exchange rate of LARI against foreign currencies"
authors = [{name = "Illia Stebelskyi", email = "illia.stebelski@gmail.com"}]
keywords = ["nbg", "currencies", "api", "exchange rates"]
dependencies = ["requests"]
license = { file = "LICENSE" }
readme = "README.md"


[project.urls]
Home = "https://github.com/zelnkup/nbg-currencies-api"

[project.optional-dependencies]
async = ["aiohttp"]
dev = ["pytest", "pytest-asyncio", "pytest-cov"]

[tool.ruff]
line-length = 88
indent-width = 4


[tool.ruff.lint.isort]
force-single-line = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"